# ros_python_pkg_template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: package.xml
